--- a/Assets/Scripts/NewFile1.html
+++ b/Assets/Scripts/NewFile1.html
@@ -1,5 +1,6 @@
-﻿<html lang=\"ja\">
-<h2>ダウンロード</h2>
-<a href=\"./screenshot/ss001.png\" download=\"Test.jpg\">Download</a>
-<img src=\"./screenshot/ss001.png\" alt="ダウンロードする画像"/>
+﻿<html lang="ja">
+<h2>Download</h2>
+<!--<a href=".\Assets\screenshot\ss001.png" download="Test.png">Download</a>-->
+<!--<br>-->
+<img src=".\ss001.png" alt="DownLoadPhoto">
 </html>
