QRコード作成、表示

--- a/Assets/Scripts/NewFile1.html
+++ b/Assets/Scripts/NewFile1.html
@@ -1,6 +1,6 @@
 ﻿<html lang="ja">
-<h2>Download</h2>
-<!--<a href=".\Assets\screenshot\ss001.png" download="Test.png">Download</a>-->
+<!--<h2>Download</h2>-->
+<!--<a href=".\Assets\screenshot\Movie.mp4" download="Test.mp4">Download</a>-->
 <!--<br>-->
-<img src=".\ss001.png" alt="DownLoadPhoto">
+<img src=".\Assets\screenshot\Movie.mp4" alt="DownLoadPhoto">
 </html>
